Fixed date-time positioning by adding float:right and width:100% to ensure proper alignment

--- a/plugins/date-time/static/style.css
+++ b/plugins/date-time/static/style.css
@@ -14,6 +14,8 @@
     position: relative;
     display: inline-block;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    float: right;
+    width: 100%;
 }
 
 /* Time display with extra large font */
